added some style tags

--- a/html1.html
+++ b/html1.html
@@ -5,6 +5,11 @@
 <h2>HTML Links</h2>
 <p>HTML links are defined with the a tag:</p>
 
+<p>I am normal</p>
+<p style="color:red;">I am red</p>
+<p style="color:blue;">I am blue</p>
+<p style="font-size:50px;">I am big</p>
+
 <a href="https://www.w3schools.com">This is a link</a>
 
 </body>
